docs: python docs, support type alias

--- a/docs/docs/api/client/python/classes/action-chain.mdx
+++ b/docs/docs/api/client/python/classes/action-chain.mdx
@@ -66,9 +66,9 @@ toc_max_heading_level: 4
 
 ##### Arguments <s generated />
 
-- player_locator `Locator` <s generated />
+- player_locator [`Locator`]( locator) <s generated />
 
-- camera_locator `Locator` <s generated />
+- camera_locator [`Locator`]( locator) <s generated />
 
 - dest [`Vector3`]( vector3) <s generated />
 
@@ -118,7 +118,7 @@ toc_max_heading_level: 4
 
 ##### Arguments <s generated />
 
-- locator `Locator` <s generated />
+- locator [`Locator`]( locator) <s generated />
 
 - text [`str`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#numeric-types-int-float-complex) <s generated />
 
