--- a/docs/docs/api/client/python/classes/gamium-client.mdx
+++ b/docs/docs/api/client/python/classes/gamium-client.mdx
@@ -26,7 +26,7 @@ toc_max_heading_level: 4
 
 ##### Arguments <s generated />
 
-- locator `RpcLocator` <s generated />
+- locator [`RpcLocator`]( rpc-locator) <s generated />
 
 - option [`ExecuteRpcOptions`]( execute-rpc-options) <s generated />
 
@@ -42,7 +42,7 @@ toc_max_heading_level: 4
 
 ##### Arguments <s generated />
 
-- locator `Locator` <s generated />
+- locator [`Locator`]( locator) <s generated />
 
 - options [`FindObjectOptions`]( find-object-options) <s generated />
 
@@ -58,7 +58,7 @@ toc_max_heading_level: 4
 
 ##### Arguments <s generated />
 
-- locator `Locator` <s generated />
+- locator [`Locator`]( locator) <s generated />
 
 - options [`FindObjectOptions`]( find-object-options) <s generated />
 
@@ -74,7 +74,7 @@ toc_max_heading_level: 4
 
 ##### Arguments <s generated />
 
-- locator `Locator` <s generated />
+- locator [`Locator`]( locator) <s generated />
 
 - options [`FindObjectOptions`]( find-object-options) <s generated />
 
