--- a/docs/docs/api/client/python/classes/player.mdx
+++ b/docs/docs/api/client/python/classes/player.mdx
@@ -22,7 +22,7 @@ toc_max_heading_level: 4
 
 ##### Arguments <s generated />
 
-- other_locator `Locator` <s generated />
+- other_locator [`Locator`]( locator) <s generated />
 
 - epsilon [`int`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#numeric-types-int-float-complex) <s generated />
 
@@ -34,9 +34,9 @@ toc_max_heading_level: 4
 
 ##### Arguments <s generated />
 
-- camera_locator `Locator` <s generated />
+- camera_locator [`Locator`]( locator) <s generated />
 
-- dest [`Union`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Union)[[`Vector3`]( vector3), `Locator`] <s generated />
+- dest [`Union`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Union)[[`Vector3`]( vector3), [`Locator`]( locator)] <s generated />
 
 - options [`MovePlayerOptions`]( move-player-options) <s generated />
 
