--- a/docs/docs/api/client/python/classes/ui.mdx
+++ b/docs/docs/api/client/python/classes/ui.mdx
@@ -16,7 +16,7 @@ toc_max_heading_level: 4
 
 ##### Arguments <s generated />
 
-- locator `Locator` <s generated />
+- locator [`Locator`]( locator) <s generated />
 
 - find_options [`FindObjectOptions`]( find-object-options) <s generated />
 
@@ -30,9 +30,9 @@ toc_max_heading_level: 4
 
 ##### Arguments <s generated />
 
-- locator `Locator` <s generated />
+- locator [`Locator`]( locator) <s generated />
 
-- to [`Union`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Union)[`Locator`, [`Vector2`]( vector2)] <s generated />
+- to [`Union`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Union)[[`Locator`]( locator), [`Vector2`]( vector2)] <s generated />
 
 - find_options [`FindObjectOptions`]( find-object-options) <s generated />
 
@@ -46,7 +46,7 @@ toc_max_heading_level: 4
 
 ##### Arguments <s generated />
 
-- locator `Locator` <s generated />
+- locator [`Locator`]( locator) <s generated />
 
 - options [`FindObjectOptions`]( find-object-options) <s generated />
 
@@ -62,7 +62,7 @@ toc_max_heading_level: 4
 
 ##### Arguments <s generated />
 
-- locator `Locator` <s generated />
+- locator [`Locator`]( locator) <s generated />
 
 - options [`FindObjectOptions`]( find-object-options) <s generated />
 
@@ -78,7 +78,7 @@ toc_max_heading_level: 4
 
 ##### Arguments <s generated />
 
-- locator `Locator` <s generated />
+- locator [`Locator`]( locator) <s generated />
 
 - find_options [`FindObjectOptions`]( find-object-options) <s generated />
 
@@ -90,7 +90,7 @@ toc_max_heading_level: 4
 
 ##### Arguments <s generated />
 
-- locator `Locator` <s generated />
+- locator [`Locator`]( locator) <s generated />
 
 - delta [`Vector2`]( vector2) <s generated />
 
@@ -106,7 +106,7 @@ toc_max_heading_level: 4
 
 ##### Arguments <s generated />
 
-- locator `Locator` <s generated />
+- locator [`Locator`]( locator) <s generated />
 
 - text [`str`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#numeric-types-int-float-complex) <s generated />
 
@@ -120,7 +120,7 @@ toc_max_heading_level: 4
 
 ##### Arguments <s generated />
 
-- locator `Locator` <s generated />
+- locator [`Locator`]( locator) <s generated />
 
 - options [`FindObjectOptions`]( find-object-options) <s generated />
 
@@ -136,7 +136,7 @@ toc_max_heading_level: 4
 
 ##### Arguments <s generated />
 
-- locator `Locator` <s generated />
+- locator [`Locator`]( locator) <s generated />
 
 - options [`FindObjectOptions`]( find-object-options) <s generated />
 
