--- a/docs/docs/api/client/python/classes/until.mdx
+++ b/docs/docs/api/client/python/classes/until.mdx
@@ -32,7 +32,7 @@ toc_max_heading_level: 4
 
 ##### Arguments <s generated />
 
-- locator `Locator` <s generated />
+- locator [`Locator`]( locator) <s generated />
 
 - options [`FindObjectOptions`]( find-object-options) <s generated />
 
@@ -48,7 +48,7 @@ toc_max_heading_level: 4
 
 ##### Arguments <s generated />
 
-- locator `Locator` <s generated />
+- locator [`Locator`]( locator) <s generated />
 
 - options [`FindObjectOptions`]( find-object-options) <s generated />
 
