--- a/docs/docs/api/client/python/classes/move-player-options.mdx
+++ b/docs/docs/api/client/python/classes/move-player-options.mdx
@@ -13,7 +13,7 @@ toc_max_heading_level: 4
 
 <hr class="solid" />  <s generated />
 
-#### epsilon `float` <s generated />
+#### epsilon [`float`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#numeric-types-int-float-complex) <s generated />
 
 <hr class="solid" />  <s generated />
 
