--- a/docs/docs/api/client/python/classes/query-profile-result.mdx
+++ b/docs/docs/api/client/python/classes/query-profile-result.mdx
@@ -9,6 +9,6 @@ toc_max_heading_level: 4
 
 ## Properties <s generated />
 
-#### fps `float` <s generated />
+#### fps [`float`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#numeric-types-int-float-complex) <s generated />
 
 <hr class="solid" />  <s generated />
