--- a/docs/docs/api/client/python/classes/vector2.mdx
+++ b/docs/docs/api/client/python/classes/vector2.mdx
@@ -9,11 +9,11 @@ toc_max_heading_level: 4
 
 ## Properties <s generated />
 
-#### x `float` <s generated />
+#### x [`float`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#numeric-types-int-float-complex) <s generated />
 
 <hr class="solid" />  <s generated />
 
-#### y `float` <s generated />
+#### y [`float`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#numeric-types-int-float-complex) <s generated />
 
 <hr class="solid" />  <s generated />
 
