docs: python docs, class property

--- a/docs/docs/api/client/python/classes/execute-rpc-by.mdx
+++ b/docs/docs/api/client/python/classes/execute-rpc-by.mdx
@@ -6,3 +6,11 @@ toc_max_heading_level: 4
 # ExecuteRpcBy <s generated />
 
 <hr class="solid" />  <s generated />
+
+## Properties <s generated />
+
+#### Method <s generated />
+
+#### Field <s generated />
+
+#### Property <s generated />
