--- a/docs/docs/api/client/python/classes/input-key-by.mdx
+++ b/docs/docs/api/client/python/classes/input-key-by.mdx
@@ -6,3 +6,9 @@ toc_max_heading_level: 4
 # InputKeyBy <s generated />
 
 <hr class="solid" />  <s generated />
+
+## Properties <s generated />
+
+#### UNITY_KEYCODE <s generated />
+
+#### UNITY_KEYBOARD <s generated />
