--- a/docs/docs/api/client/python/classes/object-locator-by.mdx
+++ b/docs/docs/api/client/python/classes/object-locator-by.mdx
@@ -6,3 +6,9 @@ toc_max_heading_level: 4
 # ObjectLocatorBy <s generated />
 
 <hr class="solid" />  <s generated />
+
+## Properties <s generated />
+
+#### Path <s generated />
+
+#### Tag <s generated />
