--- a/docs/docs/api/client/python/classes/object-type.mdx
+++ b/docs/docs/api/client/python/classes/object-type.mdx
@@ -6,3 +6,11 @@ toc_max_heading_level: 4
 # ObjectType <s generated />
 
 <hr class="solid" />  <s generated />
+
+## Properties <s generated />
+
+#### Unknown <s generated />
+
+#### UI <s generated />
+
+#### Camera <s generated />
