--- a/docs/docs/api/client/python/classes/unity-key-code.mdx
+++ b/docs/docs/api/client/python/classes/unity-key-code.mdx
@@ -6,3 +6,659 @@ toc_max_heading_level: 4
 # UnityKeyCode <s generated />
 
 <hr class="solid" />  <s generated />
+
+## Properties <s generated />
+
+#### Backspace <s generated />
+
+#### Tab <s generated />
+
+#### Clear <s generated />
+
+#### Return <s generated />
+
+#### Pause <s generated />
+
+#### Escape <s generated />
+
+#### Space <s generated />
+
+#### Exclaim <s generated />
+
+#### DoubleQuote <s generated />
+
+#### Hash <s generated />
+
+#### Dollar <s generated />
+
+#### Percent <s generated />
+
+#### Ampersand <s generated />
+
+#### Quote <s generated />
+
+#### LeftParen <s generated />
+
+#### RightParen <s generated />
+
+#### Asterisk <s generated />
+
+#### Plus <s generated />
+
+#### Comma <s generated />
+
+#### Minus <s generated />
+
+#### Period <s generated />
+
+#### Slash <s generated />
+
+#### Alpha0 <s generated />
+
+#### Alpha1 <s generated />
+
+#### Alpha2 <s generated />
+
+#### Alpha3 <s generated />
+
+#### Alpha4 <s generated />
+
+#### Alpha5 <s generated />
+
+#### Alpha6 <s generated />
+
+#### Alpha7 <s generated />
+
+#### Alpha8 <s generated />
+
+#### Alpha9 <s generated />
+
+#### Colon <s generated />
+
+#### Semicolon <s generated />
+
+#### Less <s generated />
+
+#### Equals <s generated />
+
+#### Greater <s generated />
+
+#### Question <s generated />
+
+#### At <s generated />
+
+#### LeftBracket <s generated />
+
+#### Backslash <s generated />
+
+#### RightBracket <s generated />
+
+#### Caret <s generated />
+
+#### Underscore <s generated />
+
+#### BackQuote <s generated />
+
+#### A <s generated />
+
+#### B <s generated />
+
+#### C <s generated />
+
+#### D <s generated />
+
+#### E <s generated />
+
+#### F <s generated />
+
+#### G <s generated />
+
+#### H <s generated />
+
+#### I <s generated />
+
+#### J <s generated />
+
+#### K <s generated />
+
+#### L <s generated />
+
+#### M <s generated />
+
+#### N <s generated />
+
+#### O <s generated />
+
+#### P <s generated />
+
+#### Q <s generated />
+
+#### R <s generated />
+
+#### S <s generated />
+
+#### T <s generated />
+
+#### U <s generated />
+
+#### V <s generated />
+
+#### W <s generated />
+
+#### X <s generated />
+
+#### Y <s generated />
+
+#### Z <s generated />
+
+#### LeftCurlyBracket <s generated />
+
+#### Pipe <s generated />
+
+#### RightCurlyBracket <s generated />
+
+#### Tilde <s generated />
+
+#### Delete <s generated />
+
+#### Keypad0 <s generated />
+
+#### Keypad1 <s generated />
+
+#### Keypad2 <s generated />
+
+#### Keypad3 <s generated />
+
+#### Keypad4 <s generated />
+
+#### Keypad5 <s generated />
+
+#### Keypad6 <s generated />
+
+#### Keypad7 <s generated />
+
+#### Keypad8 <s generated />
+
+#### Keypad9 <s generated />
+
+#### KeypadPeriod <s generated />
+
+#### KeypadDivide <s generated />
+
+#### KeypadMultiply <s generated />
+
+#### KeypadMinus <s generated />
+
+#### KeypadPlus <s generated />
+
+#### KeypadEnter <s generated />
+
+#### KeypadEquals <s generated />
+
+#### UpArrow <s generated />
+
+#### DownArrow <s generated />
+
+#### RightArrow <s generated />
+
+#### LeftArrow <s generated />
+
+#### Insert <s generated />
+
+#### Home <s generated />
+
+#### End <s generated />
+
+#### PageUp <s generated />
+
+#### PageDown <s generated />
+
+#### F1 <s generated />
+
+#### F2 <s generated />
+
+#### F3 <s generated />
+
+#### F4 <s generated />
+
+#### F5 <s generated />
+
+#### F6 <s generated />
+
+#### F7 <s generated />
+
+#### F8 <s generated />
+
+#### F9 <s generated />
+
+#### F10 <s generated />
+
+#### F11 <s generated />
+
+#### F12 <s generated />
+
+#### F13 <s generated />
+
+#### F14 <s generated />
+
+#### F15 <s generated />
+
+#### Numlock <s generated />
+
+#### CapsLock <s generated />
+
+#### ScrollLock <s generated />
+
+#### RightShift <s generated />
+
+#### LeftShift <s generated />
+
+#### RightControl <s generated />
+
+#### LeftControl <s generated />
+
+#### RightAlt <s generated />
+
+#### LeftAlt <s generated />
+
+#### RightApple <s generated />
+
+#### RightCommand <s generated />
+
+#### RightMeta <s generated />
+
+#### LeftApple <s generated />
+
+#### LeftCommand <s generated />
+
+#### LeftMeta <s generated />
+
+#### LeftWindows <s generated />
+
+#### RightWindows <s generated />
+
+#### AltGr <s generated />
+
+#### Help <s generated />
+
+#### Print <s generated />
+
+#### SysReq <s generated />
+
+#### Break <s generated />
+
+#### Menu <s generated />
+
+#### Mouse0 <s generated />
+
+#### Mouse1 <s generated />
+
+#### Mouse2 <s generated />
+
+#### Mouse3 <s generated />
+
+#### Mouse4 <s generated />
+
+#### Mouse5 <s generated />
+
+#### Mouse6 <s generated />
+
+#### JoystickButton0 <s generated />
+
+#### JoystickButton1 <s generated />
+
+#### JoystickButton2 <s generated />
+
+#### JoystickButton3 <s generated />
+
+#### JoystickButton4 <s generated />
+
+#### JoystickButton5 <s generated />
+
+#### JoystickButton6 <s generated />
+
+#### JoystickButton7 <s generated />
+
+#### JoystickButton8 <s generated />
+
+#### JoystickButton9 <s generated />
+
+#### JoystickButton10 <s generated />
+
+#### JoystickButton11 <s generated />
+
+#### JoystickButton12 <s generated />
+
+#### JoystickButton13 <s generated />
+
+#### JoystickButton14 <s generated />
+
+#### JoystickButton15 <s generated />
+
+#### JoystickButton16 <s generated />
+
+#### JoystickButton17 <s generated />
+
+#### JoystickButton18 <s generated />
+
+#### JoystickButton19 <s generated />
+
+#### Joystick1Button0 <s generated />
+
+#### Joystick1Button1 <s generated />
+
+#### Joystick1Button2 <s generated />
+
+#### Joystick1Button3 <s generated />
+
+#### Joystick1Button4 <s generated />
+
+#### Joystick1Button5 <s generated />
+
+#### Joystick1Button6 <s generated />
+
+#### Joystick1Button7 <s generated />
+
+#### Joystick1Button8 <s generated />
+
+#### Joystick1Button9 <s generated />
+
+#### Joystick1Button10 <s generated />
+
+#### Joystick1Button11 <s generated />
+
+#### Joystick1Button12 <s generated />
+
+#### Joystick1Button13 <s generated />
+
+#### Joystick1Button14 <s generated />
+
+#### Joystick1Button15 <s generated />
+
+#### Joystick1Button16 <s generated />
+
+#### Joystick1Button17 <s generated />
+
+#### Joystick1Button18 <s generated />
+
+#### Joystick1Button19 <s generated />
+
+#### Joystick2Button0 <s generated />
+
+#### Joystick2Button1 <s generated />
+
+#### Joystick2Button2 <s generated />
+
+#### Joystick2Button3 <s generated />
+
+#### Joystick2Button4 <s generated />
+
+#### Joystick2Button5 <s generated />
+
+#### Joystick2Button6 <s generated />
+
+#### Joystick2Button7 <s generated />
+
+#### Joystick2Button8 <s generated />
+
+#### Joystick2Button9 <s generated />
+
+#### Joystick2Button10 <s generated />
+
+#### Joystick2Button11 <s generated />
+
+#### Joystick2Button12 <s generated />
+
+#### Joystick2Button13 <s generated />
+
+#### Joystick2Button14 <s generated />
+
+#### Joystick2Button15 <s generated />
+
+#### Joystick2Button16 <s generated />
+
+#### Joystick2Button17 <s generated />
+
+#### Joystick2Button18 <s generated />
+
+#### Joystick2Button19 <s generated />
+
+#### Joystick3Button0 <s generated />
+
+#### Joystick3Button1 <s generated />
+
+#### Joystick3Button2 <s generated />
+
+#### Joystick3Button3 <s generated />
+
+#### Joystick3Button4 <s generated />
+
+#### Joystick3Button5 <s generated />
+
+#### Joystick3Button6 <s generated />
+
+#### Joystick3Button7 <s generated />
+
+#### Joystick3Button8 <s generated />
+
+#### Joystick3Button9 <s generated />
+
+#### Joystick3Button10 <s generated />
+
+#### Joystick3Button11 <s generated />
+
+#### Joystick3Button12 <s generated />
+
+#### Joystick3Button13 <s generated />
+
+#### Joystick3Button14 <s generated />
+
+#### Joystick3Button15 <s generated />
+
+#### Joystick3Button16 <s generated />
+
+#### Joystick3Button17 <s generated />
+
+#### Joystick3Button18 <s generated />
+
+#### Joystick3Button19 <s generated />
+
+#### Joystick4Button0 <s generated />
+
+#### Joystick4Button1 <s generated />
+
+#### Joystick4Button2 <s generated />
+
+#### Joystick4Button3 <s generated />
+
+#### Joystick4Button4 <s generated />
+
+#### Joystick4Button5 <s generated />
+
+#### Joystick4Button6 <s generated />
+
+#### Joystick4Button7 <s generated />
+
+#### Joystick4Button8 <s generated />
+
+#### Joystick4Button9 <s generated />
+
+#### Joystick4Button10 <s generated />
+
+#### Joystick4Button11 <s generated />
+
+#### Joystick4Button12 <s generated />
+
+#### Joystick4Button13 <s generated />
+
+#### Joystick4Button14 <s generated />
+
+#### Joystick4Button15 <s generated />
+
+#### Joystick4Button16 <s generated />
+
+#### Joystick4Button17 <s generated />
+
+#### Joystick4Button18 <s generated />
+
+#### Joystick4Button19 <s generated />
+
+#### Joystick5Button0 <s generated />
+
+#### Joystick5Button1 <s generated />
+
+#### Joystick5Button2 <s generated />
+
+#### Joystick5Button3 <s generated />
+
+#### Joystick5Button4 <s generated />
+
+#### Joystick5Button5 <s generated />
+
+#### Joystick5Button6 <s generated />
+
+#### Joystick5Button7 <s generated />
+
+#### Joystick5Button8 <s generated />
+
+#### Joystick5Button9 <s generated />
+
+#### Joystick5Button10 <s generated />
+
+#### Joystick5Button11 <s generated />
+
+#### Joystick5Button12 <s generated />
+
+#### Joystick5Button13 <s generated />
+
+#### Joystick5Button14 <s generated />
+
+#### Joystick5Button15 <s generated />
+
+#### Joystick5Button16 <s generated />
+
+#### Joystick5Button17 <s generated />
+
+#### Joystick5Button18 <s generated />
+
+#### Joystick5Button19 <s generated />
+
+#### Joystick6Button0 <s generated />
+
+#### Joystick6Button1 <s generated />
+
+#### Joystick6Button2 <s generated />
+
+#### Joystick6Button3 <s generated />
+
+#### Joystick6Button4 <s generated />
+
+#### Joystick6Button5 <s generated />
+
+#### Joystick6Button6 <s generated />
+
+#### Joystick6Button7 <s generated />
+
+#### Joystick6Button8 <s generated />
+
+#### Joystick6Button9 <s generated />
+
+#### Joystick6Button10 <s generated />
+
+#### Joystick6Button11 <s generated />
+
+#### Joystick6Button12 <s generated />
+
+#### Joystick6Button13 <s generated />
+
+#### Joystick6Button14 <s generated />
+
+#### Joystick6Button15 <s generated />
+
+#### Joystick6Button16 <s generated />
+
+#### Joystick6Button17 <s generated />
+
+#### Joystick6Button18 <s generated />
+
+#### Joystick6Button19 <s generated />
+
+#### Joystick7Button0 <s generated />
+
+#### Joystick7Button1 <s generated />
+
+#### Joystick7Button2 <s generated />
+
+#### Joystick7Button3 <s generated />
+
+#### Joystick7Button4 <s generated />
+
+#### Joystick7Button5 <s generated />
+
+#### Joystick7Button6 <s generated />
+
+#### Joystick7Button7 <s generated />
+
+#### Joystick7Button8 <s generated />
+
+#### Joystick7Button9 <s generated />
+
+#### Joystick7Button10 <s generated />
+
+#### Joystick7Button11 <s generated />
+
+#### Joystick7Button12 <s generated />
+
+#### Joystick7Button13 <s generated />
+
+#### Joystick7Button14 <s generated />
+
+#### Joystick7Button15 <s generated />
+
+#### Joystick7Button16 <s generated />
+
+#### Joystick7Button17 <s generated />
+
+#### Joystick7Button18 <s generated />
+
+#### Joystick7Button19 <s generated />
+
+#### Joystick8Button0 <s generated />
+
+#### Joystick8Button1 <s generated />
+
+#### Joystick8Button2 <s generated />
+
+#### Joystick8Button3 <s generated />
+
+#### Joystick8Button4 <s generated />
+
+#### Joystick8Button5 <s generated />
+
+#### Joystick8Button6 <s generated />
+
+#### Joystick8Button7 <s generated />
+
+#### Joystick8Button8 <s generated />
+
+#### Joystick8Button9 <s generated />
+
+#### Joystick8Button10 <s generated />
+
+#### Joystick8Button11 <s generated />
+
+#### Joystick8Button12 <s generated />
+
+#### Joystick8Button13 <s generated />
+
+#### Joystick8Button14 <s generated />
+
+#### Joystick8Button15 <s generated />
+
+#### Joystick8Button16 <s generated />
+
+#### Joystick8Button17 <s generated />
+
+#### Joystick8Button18 <s generated />
+
+#### Joystick8Button19 <s generated />
