--- a/docs/docs/api/client/python/classes/gamium-error.mdx
+++ b/docs/docs/api/client/python/classes/gamium-error.mdx
@@ -24,4 +24,8 @@ toc_max_heading_level: 4
 
 <s childtag /> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='public'/> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='static'/> <s generated />
 
+##### Return <s generated />
+
+- [`GamiumError`]( gamium-error) <s generated />
+
 <hr class="solid" />  <s generated />
