--- a/docs/docs/api/client/python/classes/move-player-by.mdx
+++ b/docs/docs/api/client/python/classes/move-player-by.mdx
@@ -6,3 +6,9 @@ toc_max_heading_level: 4
 # MovePlayerBy <s generated />
 
 <hr class="solid" />  <s generated />
+
+## Properties <s generated />
+
+#### KeyPress <s generated />
+
+#### Navigation <s generated />
