--- a/docs/docs/api/client/python/classes/player.mdx
+++ b/docs/docs/api/client/python/classes/player.mdx
@@ -6,6 +6,8 @@ toc_max_heading_level: 4
 
 # Player <s generated />
 
+Indicates the player that the user plays.
+
 <hr class="solid" />  <s generated />
 
 ## Properties <s generated />
