--- a/docs/docs/api/client/python/classes/ui.mdx
+++ b/docs/docs/api/client/python/classes/ui.mdx
@@ -6,13 +6,24 @@ toc_max_heading_level: 4
 
 # UI <s generated />
 
+[UI Controling](../../../../docs/client/ui) has a description. Class for easy UI manipulation.
+
 <hr class="solid" />  <s generated />
+
 
 ## Methods <s generated />
 
 ### click <s generated />
 
 <s childtag /> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='public'/> <s generated />
+
+Wait for the specified object to be found through [`Locator`](locator). If the object is found, wait until interaction is possible. Click if interaction is possible.
+
+##### Usage
+
+```python
+ui.click(By.path('Object path'))
+```
 
 ##### Arguments <s generated />
 
@@ -27,6 +38,14 @@ toc_max_heading_level: 4
 ### drag <s generated />
 
 <s childtag /> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='public'/> <s generated />
+
+Wait for the specified object to be found through [`Locator`](locator). If the object is found, wait until interaction is possible. If interaction is possible, start the drag.
+
+##### Usage
+
+```python
+ui.drag(By.path('Object path'), Vector2(0, 0))
+```
 
 ##### Arguments <s generated />
 
@@ -44,6 +63,14 @@ toc_max_heading_level: 4
 
 <s childtag /> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='public'/> <s generated />
 
+Wait for the specified object to be found through [`Locator`](locator). If an object is found, it is considered to be [`UIElement`](ui-element) and returns the object
+
+##### Usage
+
+```python
+elem = ui.find(By.path('Object path'))
+```
+
 ##### Arguments <s generated />
 
 - locator [`Locator`]( locator) <s generated />
@@ -59,6 +86,14 @@ toc_max_heading_level: 4
 ### finds <s generated />
 
 <s childtag /> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='public'/> <s generated />
+
+Finds the objects specified through [`Locator`](locator). If the objects are found, consider them as [`UIelement`](ui-element) and return the objects
+
+##### Usage
+
+```python
+elems = ui.finds(By.path('Object path'))
+```
 
 ##### Arguments <s generated />
 
@@ -76,6 +111,14 @@ toc_max_heading_level: 4
 
 <s childtag /> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='public'/> <s generated />
 
+Wait for the specified object to be found through [`Locator`](locator). If the object is found, wait until interaction is possible. Returns Text if interaction is possible and Text exists.
+
+##### Usage
+
+```python
+progress = ui.get_text(By.path('Object path'))
+```
+
 ##### Arguments <s generated />
 
 - locator [`Locator`]( locator) <s generated />
@@ -87,6 +130,14 @@ toc_max_heading_level: 4
 ### scroll <s generated />
 
 <s childtag /> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='public'/> <s generated />
+
+Wait for the specified object to be found through ['Locator'](locator). If the object is found, wait until interaction is possible. Start scrolling if interaction is possible.
+
+##### Usage
+
+```python
+ui.scroll(By.path('Object path'), Vector2(0, -0.1 ))
+```
 
 ##### Arguments <s generated />
 
@@ -103,6 +154,14 @@ toc_max_heading_level: 4
 ### set_text <s generated />
 
 <s childtag /> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='public'/> <s generated />
+
+Wait for the specified object to be found through ['Locator'](locator). If the object is found, wait until interaction is possible. If you can interact and type Text, type Text.
+
+##### Usage
+
+```python
+ui.set_text(By.path('Object path'), 'Hello, World!')
+```
 
 ##### Arguments <s generated />
 
