--- a/docs/docs/api/client/typescript/classes/ui.mdx
+++ b/docs/docs/api/client/typescript/classes/ui.mdx
@@ -6,9 +6,10 @@ toc_max_heading_level: 4
 
 # UI <s generated />
 
+[UI Controling](../../../../docs/client/ui) has a description. Class for easy UI manipulation.
+
 <hr class="solid" />  <s generated />
 
-[UI Controling](/docs/client/ui) has a description. Class for easy UI manipulation.
 
 ## Methods <s generated />
 
@@ -70,7 +71,7 @@ await ui.drag(By.path('Object path'), { x: 0, y: 0 });
 
 <s childtag /> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='public'/> <s generated />
 
-Wait for the specified object to be found through [`Locator`](../types/locator). If an object is found, it is considered to be [`UIElement`] (ui-element) and returns the object
+Wait for the specified object to be found through [`Locator`](../types/locator). If an object is found, it is considered to be [`UIElement`](ui-element) and returns the object
 
 ##### Usage
 
